--- a/public/css/league/register.css
+++ b/public/css/league/register.css
@@ -86,7 +86,7 @@ p.blurb {
 }
 
 #birthday {
-	width: 70px;
+	width: 115px;
 	text-align: center;
 }
 
@@ -105,7 +105,7 @@ p.blurb {
 }
 
 #phone {
-	width: 75px;
+	width: 115px;
 }
 
 #height {
