--- a/public/css/profile/personal.css
+++ b/public/css/profile/personal.css
@@ -64,12 +64,12 @@ dd.no {
 }
 
 #birthday {
-    width: 90px;
+    width: 115px;
     text-align: center;
 }
 
 #phone {
-    width: 105px;
+    width: 115px;
 }
 
 #experience {
